--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,11 +30,24 @@ body {
   overflow-x: none;
 }
 
+
+.darkBackground_header{
+  position: fixed;
+  z-index: 12;
+  background: var(--background-gray);
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.darkBackground-none_header{
+  display: none;
+}
+
 .header {
   width: 100%;
   height: 200px;
   position: fixed;
-  z-index: 10;
   background: white;
   border-bottom: 1px var(--light-gray-color) solid;
   top: 0;
