it added to food clicked list

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,7 @@ body {
   position: fixed;
   background: white;
   border-bottom: 1px var(--light-gray-color) solid;
+  z-index: 20;
   top: 0;
 }
 
