--- a/src/app/search.css
+++ b/src/app/search.css
@@ -31,10 +31,13 @@ body {
     overflow-x: none;
 }
 
-.searched{
-    width: 100%;
+.searched_head{
+    width: 96%;
     background: white;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
+
 
 .restaurant_header{
     display: flex;
@@ -74,13 +77,13 @@ body {
 .list_main{
     display: flex;
     align-items: center;
-    width: 50%;
+    width: 100%;
 }
 
 .searched_foods{
     display: flex;
     align-items: flex-start;
-    width: 50%;
+    width: 55%;
 }
 
 .foods_textBox{
@@ -110,6 +113,10 @@ body {
     padding: 10px;
 }
 
+.searched_restaurant{
+    width: 100%;
+}
+
 .foods_imgBox{
     width: 55%;
 }
@@ -130,4 +137,10 @@ body {
 
 .searched_price{
     text-align: left;
+}
+
+@media only screen and (min-width: 1440px) {
+    .search{
+        width: 435px;
+    }
 }
