--- a/src/app/restaurants.css
+++ b/src/app/restaurants.css
@@ -106,7 +106,6 @@ body {
     width: 100%;
     height: 225px;
     border: var(--borders-color) solid 1px;
-    padding: 16px;
 }
 
 .main_foodsList {
@@ -490,7 +489,7 @@ body {
 
     .food_list {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
     }
 
     .food {
@@ -515,14 +514,20 @@ body {
 
     .main_foodsList {
         width: 530px;
+        padding: 0 16px;
     }
 
     .main_restaurantInfo {
         width: 100%;
     }
 
+    .food_list{
+        grid-template-columns: repeat(2,1fr);
+    }
+
     .food {
         width: 250px;
+        flex-direction: column;
     }
 }
 
